# MonteCarlo

./: .gitignore  CMakeLists.txt  ClockModel.cpp  ClockModel.h  DataFrame.cpp  DataFrame.h  DataFrame.py  GraphModel.cpp  GraphModel.h  IsingModel.cpp  IsingModel.h  MonteCarlo.cpp  MonteCarlo.h  Routines.cpp  SpinModel.cpp  SpinModel.h  Super.h  Utility.cpp  XYModel.cpp  XYModel.h  doruns4  make_job.py  pyproject.toml  testing.cpp
Clock/: AnalyzeMagnetization.py  DisplayTexture.py  RunClock.cpp  SquareClockModel.cpp  make
Clock/Configs/: GenerateConfigs.cpp  config_make
Clock/Magnetization/: MagnetizationCurve.cpp  make  output
Graph/: AnalyzeConnectivity.ipynb  AnalyzeConnectivity.py  ConnectivityCurve.cpp  SimpleGraphModel.cpp  SimpleGraphModel.h  make
Hexagonal/: AnalyzeLog.py  DisplayTexture.py  GenerateData  GenerateData.cpp  GetAngles.py  HexagonalModel.cpp  Log.txt  SpinTexture.txt  Testing.cpp  interp_make.py  make.py
Hexagonal/Animation/: AnimateHexagonal.py  GenerateData.cpp  GetSpins.cpp  Log.txt  SpinTexture.txt  make.py
Hexagonal/Timing/: Log.txt  Testing.cpp
Ising/: AnalyzeMagnetization.py  DisplayTexture.py  Log.txt  MagnetizationCurve.cpp  PlotMag.py  RunIsing.cpp  Spins.txt  SquareIsingModel.cpp  SquareIsingModel.h  StiffnessCurve.cpp  mag_curve.txt  make  testing.cpp
Ising/Magnetization/: AnalyzeMagnetizationCurve.py  MagnetizationCurve.cpp
SquareHeisenberg/: AnalyzeMagnetization.py  AnalyzeStiffnessCurve.py  RunSquare.cpp  SquareModel.cpp  StiffnessCurve.cpp  make
SquareHeisenberg/data/: stiffness16.txt  stiffness32.txt  stiffness4.txt  stiffness64.txt  stiffness8.txt
Trigonal/: DisplayTexture.py  RunTrig.cpp  Timing.cpp  TrigonalModel.cpp  TrigonalModel.h
Trigonal/Configs/: AnimateConfigs.py  GenerateConfigs.cpp  make
Trigonal/CorrFun/: AnalyzeCorrelationFunction.py  AnimateCorrelationFunction.py  CorrFun.cpp  CorrFunF.cpp  CorrFunS.cpp  CorrFunZ.cpp
Trigonal/ParamFits/: AnalyzeMagnetizationCurve.py  AnalyzeSusceptibilityCurve.py  Convergence.cpp  HysteresisCurve.cpp  MagnetizationCurve.cpp  MagnetizationCurveB.cpp  PlotMagnetizationCurve.py  PlotSusceptibilityCurves.py  PlotSusceptibilityCurves2.py  SusceptibilityCurve.cpp  SusceptibilityCurveB.cpp  Test.py  conv_make  dorunh1  dorunm0  dorunm1  dorunm2  dorunm3  doruns  doruns1  doruns2  doruns3  make_params  output  outputJ  params.txt  slurm-175640.out  slurm-175642.out  slurm-175645.out  slurm-175646.out  slurm-176037.out  slurm-176039.out  slurm-178138.out  test  testing.cpp  testrun  vary_J  vary_J2  vary_K1  vary_K3
Trigonal/ParamFits/Animation/: AnimateTrigonal.py
Trigonal/Stiffness/: AnalyzeStiffnessCurve.py  AnimateStiffnessCurve.py  StiffnessCurve.cpp  stiffness_make  test
Trigonal/Testing/: Timing.cpp  job.sl  make
XXZ/: DisplayTexture.py  EasyPlaneHeis.cpp  MagnetizationCurve.py  RunHeis.cpp  XXZHeis.cpp  XXZHeis.h
XXZ/Magnetization/: AnalyzeMagnetizationCurve.py  MagnetizationCurve.cpp  magnetization_make
XXZ/Stiffness/: AnalyzeStiffnessCurve.py  StiffnessCurve.cpp  stiffness_make
XXZ/Vorticity/: VorticityCurve.cpp  testing.cpp  vorticity_make
XY/: AnalyzeEnergy.py  AnalyzeMagnetization.py  AnalyzeStiffnessCurve.py  AnimateStiffnessCurve.py  Backup_SquareXYModel.cpp  DisplayTexture.py  Fugacity.cpp  Log.txt  RunXY.cpp  Spins.txt  SquareXYModel.cpp  StiffnessCurve.cpp  Timing.cpp  Timing2.cpp  TrigonalXYModel.cpp  TrigonalXYModel.h  make  plot_dEs.py  smalltest.cpp  testing.cpp
XY/Magnetization/: AnalyzeMagnetizationCurve.py  MagnetizationCurve.cpp  magnetization_make
XY/Old/: XYModel.cpp
XY/SpinConfigs/: EnergyConfigs.cpp  GenerateConfigs.cpp  PlotEnergyDensity.py  config_make  energy_make
XY/Stiffness/: AnalyzeStiffnessCurve.py  AnimateStiffnessCurve.py  StiffnessCurve.cpp  output  stiffness_make
XY/Vorticity/: AnalyzeVorticityCurve.py  MakeFig2.py  VortexSep.cpp  Vorticity.cpp  VorticityCurve.cpp  vorticity_make
XY/data/Old/: stiffness16.txt  stiffness32.txt  stiffness4.txt  stiffness64.txt  stiffness8.txt
XY/data/base_case/: stiffness128.txt  stiffness16.txt  stiffness32.txt  stiffness4.txt  stiffness64.txt  stiffness8.txt
XY/data/dm_case/: stiffness128.txt  stiffness16.txt  stiffness32.txt  stiffness4.txt  stiffness64.txt  stiffness8.txt
XY/data/weak_field/: stiffness128.txt  stiffness16.txt  stiffness32.txt  stiffness4.txt  stiffness64.txt  stiffness8.txt
pymc/: bindings.py
src/: DataFrame.cpp  DataFrame.h  Graph.hpp  Lattice.hpp  MonteCarlo.cpp  MonteCarlo.h  MonteCarlo.hpp  PyMonteCarloSimulators.cpp  Random.hpp  Utility.cpp  Utility.h  glad.cpp  main.cpp  test.cpp
src/Clock/: CMakeLists.txt  ClockModel.h  SquareClockModel.cpp  SquareClockModel.h
src/Graph/: CMakeLists.txt  GraphModel.cpp  GraphModel.h  SimpleGraphModel.cpp  SimpleGraphModel.h
src/Heisenberg/: CMakeLists.txt  SpinModel.cpp  SpinModel.h
src/Heisenberg/Trigonal/: TrigonalModel.cpp  TrigonalModel.h
src/Ising/: CMakeLists.txt  IsingModel.cpp  IsingModel.h  RunIsing.cpp  SquareIsingModel.cpp  SquareIsingModel.h
src/MultibodyIsing/: CMakeLists.txt  LDPCIsingModel.cpp  LDPCIsingModel.h  MultibodyIsingModel.cpp  MultibodyIsingModel.h
src/SimulatorDisplay/: Animator.cpp  Animator.h  CMakeLists.txt  Shader.cpp  Shader.h  fragment_texture_shader.fs
src/Spin2d/: CMakeLists.txt  Spin2DModel.cpp  Spin2DModel.h  SquareXYModel.cpp  SquareXYModel.h  TrigonalXYModel.cpp  TrigonalXYModel.h
src/Spin3d/: AltermagnetModel.cpp  AltermagnetModel.h  CMakeLists.txt  HelixModel.cpp  HelixModel.h  Selenium.cpp  Selenium.h  Spin3DModel.cpp  Spin3DModel.h  TrigonalModel.cpp  TrigonalModel.h  XXZHeis.cpp  XXZHeis.h
src/XY/: CMakeLists.txt  SquareXYModel.h  TrigonalXYModel.cpp  XYModel.cpp  XYModel.h
src/glad/: glad.h
